# windsurf

./: .gitignore  .pre-commit-config.yaml  GIT_WORKFLOW.md  README.md  app_verify.py  flashcard_check.json  index.html  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: python.yml
cases/: Brookfield Multiplex Ltd v Owners SP [2014] HCA 36.rtf  Nationwide News Pty Ltd v Naidu [2007] NSWCA 377.rtf  South Western Sydney Local Health District v Gould [2018] NSWCA 69.rtf
docs/: README.md
jd/: fix_cards.py  fix_why_it_matters.py  fix_why_it_matters_v2.py
outputs/: case_cards.jsonl
reports/: flashcard_check.json  flashcard_check.md
scripts/: DEPRECATED_SCRIPTS.md  apply_curated_edits.py  assistant_config_monte_carlo.py  clean_format.py  compact_v2a.py  find_reports.py  flashcard_optimizer.py  flashcard_processor.py  flashcard_workflow.py  format_cards.py  jd_master_card_monte_carlo.py  legal_pinpoint_fetcher.py  meta_patch_keywords_mindmap.py  meta_patch_mindmap_fix.py  meta_patch_mindmap_fix2.py  meta_patch_mindmap_fix3.py  meta_patch_minimal.py  meta_patch_phase3.py  meta_patch_phase4.py  meta_patch_phase5.py  normalize_and_qa_cards.py  qa_utils.py  quick_fix_v2a.py  repair_and_qa_yaml.py  schema_validator.py  seed_scaffolds.py
service/: __init__.py  api.py
tests/: conftest.py  test_legal_pinpoint_pipeline.py  test_service_api.py  test_validator.py
tools/: card_schema.yml  card_schema_v3.yml  gates.yml  gates_v3.yml  legal_pinpoint_pipeline.py  schema_validator.py  topics.yml  yaml_fallback.py
(+194 files in other folders)
