[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windsurf"
version = "0.1.0"
description = "Windsurf utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
windsurf-cards = "windsurf.cli.cards:main"
windsurf-verify = "windsurf.cli.verify:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]